Ready to PullRequest

--- a/assets/fonts/fonts.css
+++ b/assets/fonts/fonts.css
@@ -1,15 +1,30 @@
 @font-face {
-    font-family: 'noto-regular';
-    font-display: fallback;
-    src: url('./NotoSansKR-Regular.otf');
-    font-weight: 300;
-    font-style: normal;
+  font-family: "noto-regular";
+  font-display: fallback;
+  src: url("./NotoSansKR-Regular.otf");
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Noto Sans KR";
+  font-display: fallback;
+  src: url("./NotoSansKR-Regular.otf");
+  font-weight: 300;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'nunito-regular';
-    font-display: fallback;
-    src: url('./NunitoSans-Regular.ttf');
-    font-weight: 300;
-    font-style: normal;
+  font-family: "nunito-regular";
+  font-display: fallback;
+  src: url("./NunitoSans-Regular.ttf");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Nunito Sans";
+  font-display: fallback;
+  src: url("./NunitoSans-Regular.ttf");
+  font-weight: 300;
+  font-style: normal;
 }
