--- a/assets/fonts/fonts.css
+++ b/assets/fonts/fonts.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "noto-regular";
+  font-family: "gothica1-regular";
   font-display: fallback;
   src: url("./NotoSansKR-Regular.otf");
   font-weight: 300;
